--- a/webdesign/test_citation_styles/cite.css
+++ b/webdesign/test_citation_styles/cite.css
@@ -1,162 +1,169 @@
-body {
-	font-family: Georgia;
-	font-size: 1em;
-  width: 60%;
-	/*background-color: white;*/ /*#EBE7E6*/
-}
+/**********
+****CONTENT
+**********/
+    body {
+    	font-family: Georgia;
+    	font-size: 1em;
+      width: 60%;
+    	/*background-color: white;*/ /*#EBE7E6*/
+    }
 
 
 
-/*
-#a a{
-  text-decoration: none;
-  border: none;
-  color: red;
-}
-*/
+    /*
+    #a a{
+      text-decoration: none;
+      border: none;
+      color: red;
+    }
+    */
 
 
-/*
-#a a:hover{
-  color: green;
-  background-color: transparent;
-}
-*/
+    /*
+    #a a:hover{
+      color: green;
+      background-color: transparent;
+    }
+    */
 
-/*
-#myPopup p{
-   color: blue;
-  -webkit-user-select: all  !important;  /* Chrome all / Safari all 
-  -moz-user-select: all !important;     /* Firefox all 
-  -ms-user-select: all !important;      /* IE 10+ 
-   user-select: all !important;
-}
-*/
-
-
-/*button {
-    align-items: flex-start;
-    text-align: center;
-    cursor: default;
-    color: black;
-    padding: 0px 0px 0px;
-    border: 0px;
-    border-image-source: none;
-    border-image-slice: none;
-    border-image-width: none;
-    border-image-outset: none;
-    border-image-repeat: none;
-    background-color: white;
-    box-sizing: none;
-}*/
+    /*
+    #myPopup p{
+       color: blue;
+      -webkit-user-select: all  !important;  /* Chrome all / Safari all 
+      -moz-user-select: all !important;     /* Firefox all 
+      -ms-user-select: all !important;      /* IE 10+ 
+       user-select: all !important;
+    }
+    */
 
 
-.in-text {
-	background-color: #C7C7BB;
-}
+    /*button {
+        align-items: flex-start;
+        text-align: center;
+        cursor: default;
+        color: black;
+        padding: 0px 0px 0px;
+        border: 0px;
+        border-image-source: none;
+        border-image-slice: none;
+        border-image-width: none;
+        border-image-outset: none;
+        border-image-repeat: none;
+        background-color: white;
+        box-sizing: none;
+    }*/
 
-.tip {
-	background-color: yellow;
-	/*opacity: 0.9;*/
-	-webkit-filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.9));
-  filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.9));
-  	/*-webkit-filter: blur(5px);
-  	filter: blur(5px);*/
-	font-size: 14px;
-	max-width: 25%;
-	/*overflow: scroll;*/
-	padding: 2px 7px;
-	border: 1px solid black;
-  border-radius: 5px;
-	position: absolute;
-	right: 0;
-}
+/****************
+****REFERENCE BOX
+****************/
+    .in-text {
+    	background-color: #C7C7BB;
+    }
 
+/****THE BOX*/
+    .tip {
+    	background-color: yellow;
+    	/*opacity: 0.9;*/
+    	-webkit-filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.9));
+      filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.9));
+      	/*-webkit-filter: blur(5px);
+      	filter: blur(5px);*/
+    	font-size: 14px;
+    	max-width: 25%;
+    	/*overflow: scroll;*/
+    	padding: 2px 7px;
+    	border: 1px solid black;
+      border-radius: 5px;
+    	position: absolute;
+    	right: 0;
+    }
 
-.tip p {
-  margin: 0;
-}
+/***THE TEXT*/
+    .tip p {
+      margin: 0;
+    }
 
-
-#x {
-	position: inherit;
-	right: -6px;
-	top: -6px;
-	border-radius: 9px;
-	border: 1px solid red;
-	background-color: orange;
-	padding: 0 4px;
-	text-align: center;
-}
-
-
-
-#x a {
-	text-decoration: none;
-	color: black;
-}
-
-
-.keyword {
-	color: #454545;
-    /*text-shadow: 1px 1px #292929;
-   /*-webkit-text-fill-color: #FF9980;  /*Will override color (regardless of order) */
-   /*-webkit-text-stroke-width: .3px;
-   -webkit-text-stroke-color: #1F1F1F;	/*font-weight: bold !important;
-	font-family: "Baskerville";
-	border-radius: 20%;
-    background-color: #DEDEDE;
-    box-shadow:
-        0px 0px 60px 0px #BEBEBE, 
-        0 0 0px 0px #DEDEDE;*/
-
-	background: 
-	-webkit-linear-gradient(#FF9980, #292929);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-}
+/***THE X BUTTON*/
+    #x {
+    	position: inherit;
+    	right: -6px;
+    	top: -6px;
+    	border-radius: 9px;
+    	border: 1px solid red;
+    	background-color: orange;
+    	padding: 0 4px;
+    	text-align: center;
+    }
 
 
-#tools {
-  top: 2%;
-  right: 1%;
-  position: fixed;
-}
 
-.full-citation {
-  text-align: left;
-  word-wrap: break-word;
-  background-color: yellow;
-  min-height: 6em;
-  width: 95%;
-  max-width: 95%;
-  margin-top: 1%;
-  margin-left: 1%;
-  margin-bottom: 1%
-
-}
+    #x a {
+    	text-decoration: none;
+    	color: black;
+    }
 
 
-#citation-box {
-  top: 10%;
-  right: 1%;
-  position: fixed;
-/*
-  position: absolute;
-  right: 2%;
-*/
-  border: 1px solid black;
-  border-radius: 5px;
-  background-color: #C7C7BB;
-  width: 30%;
-  min-height: 65%;
-}
+    .keyword {
+    	color: #454545;
+        /*text-shadow: 1px 1px #292929;
+       /*-webkit-text-fill-color: #FF9980;  /*Will override color (regardless of order) */
+       /*-webkit-text-stroke-width: .3px;
+       -webkit-text-stroke-color: #1F1F1F;	/*font-weight: bold !important;
+    	font-family: "Baskerville";
+    	border-radius: 20%;
+        background-color: #DEDEDE;
+        box-shadow:
+            0px 0px 60px 0px #BEBEBE, 
+            0 0 0px 0px #DEDEDE;*/
 
-.confirmation {
-  background-color: green;
-  display: inline;
-  margin: auto;
-}
+    	background: 
+    	-webkit-linear-gradient(#FF9980, #292929);
+    	-webkit-background-clip: text;
+    	-webkit-text-fill-color: transparent;
+    }
+
+/***CITATIONS*/
+    #tools {
+      top: 2%;
+      right: 1%;
+      position: fixed;
+    }
+
+    .full-citation {
+      text-align: left;
+      word-wrap: break-word;
+      background-color: yellow;
+      min-height: 6em;
+      width: 95%;
+      max-width: 95%;
+      margin-top: 1%;
+      margin-left: 1%;
+      margin-bottom: 1%
+
+    }
+
+
+    #citation-box {
+      top: 10%;
+      right: 1%;
+      position: fixed;
+    /*
+      position: absolute;
+      right: 2%;
+    */
+      border: 1px solid black;
+      border-radius: 5px;
+      background-color: #C7C7BB;
+      width: 30%;
+      min-height: 65%;
+    }
+
+/***ON SUCCESFUL COPY
+    .confirmation {
+      background-color: green;
+      display: inline;
+      margin: auto;
+    }
 
 
 
