all together more or less

--- a/webdesign/ongoing prototype/lambdaCSS.css
+++ b/webdesign/ongoing prototype/lambdaCSS.css
@@ -433,7 +433,7 @@
 }
 
 #chapter8 ol {
-	padding-left: 0%;
+	/*padding-left: 0%;*/
 }
 
 /*******INDIVIDUAL BOXES*******************/
@@ -447,7 +447,7 @@
 }
 
 #chapter8 ol li p {
-	margin: 0;
+	/*margin: 0;*/
 }
 
 
