--- a/webdesign/ongoing prototype/lambdaCSS.css
+++ b/webdesign/ongoing prototype/lambdaCSS.css
@@ -154,6 +154,31 @@
 		}
 
 
+/*******MENU TOGGLE BUTTON**********/
+	.toggle_menu {
+		z-index: 1000;
+		cursor: pointer;
+		position: fixed;
+		width: 50px;
+		height: 50px;
+		background-image: url('imgs/menu_arrow_open.png');
+		background-size: 50px 50px;
+		/*background-color: blue;*/
+		  -webkit-transition: all 1s ease;
+		  -moz-transition: all 1s ease;
+		  transition: all 1s ease; 
+	}
+
+
+	.close_menu {
+		background-image: url("imgs/menu_arrow_close.png");
+		background-size: 50px 50px;
+		/*background-color: green;*/
+		  -webkit-transition: all 1s ease;
+		  -moz-transition: all 1s ease;
+		  transition: all 1s ease; 
+	}
+
 
 /****************************************
 ******* HEADER BAR **********************
